tests/paczka1/small_fuzzy/18702341.err
Error in line 6: xJOwvYT1fLR A524 51,6
Error in line 7: xJOwvYT1fLR S308 9,5
Error in line 10: Q76IBS3e A880 76,0
